--- a/BlazorApp/Service/appsettings.json
+++ b/BlazorApp/Service/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "postgresql://GamersLounge_owner:XJYz1P7LupEn@ep-bitter-salad-a2i17tas.eu-central-1.aws.neon.tech/GamersLounge?sslmode=require"
+    "DefaultConnection": "Host=ep-bitter-salad-a2i17tas.eu-central-1.aws.neon.tech;Database=GamersLounge;Username=GamersLounge_owner;Password=XJYz1P7LupEn"
   },
   "AllowedHosts": "*"
 }
