--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Npgsql" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DomainModels\" />
+  </ItemGroup>
+
 </Project>
