--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\ReusableComponents\LocationMap.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Components\ReusableComponents\LocationMap.razor" />
     <None Include="wwwroot\Picture\skyrim.png" />
   </ItemGroup>
 
@@ -16,6 +21,14 @@
     <PackageReference Include="GoogleMaps.LocationServices" Version="1.2.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\ReusableComponents\LocationMap.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\ReusableComponents\LocationMap.razor" />
   </ItemGroup>
 
 </Project>
